# Machine-Learning-Projects

./: .gitattributes  .gitignore  README.md
california-housing-prices-prediction/: My_random_forest_model.pkl  README.md  best_svm_model.pkl  ch1_housing_prices_exercise.ipynb  ch2_housing_prices_exercise.ipynb  complete_forest_reg_model.pkl  my_model.pkl
cpp-neural-network-implementation/: CMakeLists.txt  MLP.cpp  MLP.hpp  NeuralNetworkTester.cpp  README.md  sdrnn.cpp
description-of-some-machine-learning-models/: training_models.ipynb
microsoft-ml-flight-challenge/: Flights_Challenge.ipynb
mnist-digits-classification/: mnist_dataset_classifcation.ipynb
spam-classifier/: spam_classifier.ipynb
titanic-survival-prediction/: titanic_survival_predictor.ipynb
